# pdf_transform

./: .gitignore  README.md  app.py  parser.py  pdf_transform.ini  pyproject.toml  template.xlsx
templates/: index.html
