[tool.poetry]
name = "pdf_transform"
version = "0.1.0"
description = ""
authors = ["Vlad-Vargan <vladyslav.piotrovskyi@venturedoor.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pdftotext = "^2.2.1"
Flask = "^2.0.2"
openpyxl = "^3.0.9"
Pillow = "^8.4.0"
uWSGI = "^2.0.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
